--- a/IndWork/IndWork/IndWork.csproj
+++ b/IndWork/IndWork/IndWork.csproj
@@ -46,11 +46,59 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Telas\Form1.cs">
+    <Compile Include="Telas\Ajuda.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Telas\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Telas\Ajuda.Designer.cs">
+      <DependentUpon>Ajuda.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Telas\CadastrarContratante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\CadastrarContratante.Designer.cs">
+      <DependentUpon>CadastrarContratante.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Telas\CadastroPrestador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\CadastroPrestador.Designer.cs">
+      <DependentUpon>CadastroPrestador.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Telas\CardPesquisa.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Telas\CardPesquisa.Designer.cs">
+      <DependentUpon>CardPesquisa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Telas\Categorias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\Categorias.Designer.cs">
+      <DependentUpon>Categorias.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Telas\GerenciarContratantes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\GerenciarContratantes.Designer.cs">
+      <DependentUpon>GerenciarContratantes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Telas\GerenciarPrestadores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\GerenciarPrestadores.Designer.cs">
+      <DependentUpon>GerenciarPrestadores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Telas\Pesquisa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\Pesquisa.Designer.cs">
+      <DependentUpon>Pesquisa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Telas\Principal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\Principal.Designer.cs">
+      <DependentUpon>Principal.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -73,6 +121,12 @@
     <Compile Include="Telas\Ferramentas\RoundedPicture.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Telas\SobreNos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\SobreNos.Designer.cs">
+      <DependentUpon>SobreNos.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -81,7 +135,38 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Telas\Ajuda.resx">
+      <DependentUpon>Ajuda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\CadastrarContratante.resx">
+      <DependentUpon>CadastrarContratante.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\CadastroPrestador.resx">
+      <DependentUpon>CadastroPrestador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\CardPesquisa.resx">
+      <DependentUpon>CardPesquisa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\Categorias.resx">
+      <DependentUpon>Categorias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\GerenciarContratantes.resx">
+      <DependentUpon>GerenciarContratantes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\GerenciarPrestadores.resx">
+      <DependentUpon>GerenciarPrestadores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\Pesquisa.resx">
+      <DependentUpon>Pesquisa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\Principal.resx">
+      <DependentUpon>Principal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\SobreNos.resx">
+      <DependentUpon>SobreNos.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -94,6 +179,42 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\IndWork.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ImagemInicial.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\opened envelope.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LinkedIn %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\instagram logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\facebook %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Brick Wall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Tools.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Sewing Machine.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Watering Can.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Confectionery.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Captura de tela 2025-04-23 200216.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
