--- a/IndWork/IndWork/IndWork.csproj
+++ b/IndWork/IndWork/IndWork.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +52,12 @@
     </Compile>
     <Compile Include="Telas\Ajuda.Designer.cs">
       <DependentUpon>Ajuda.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Telas\Avaliacao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\Avaliacao.Designer.cs">
+      <DependentUpon>Avaliacao.cs</DependentUpon>
     </Compile>
     <Compile Include="Telas\CadastrarContratante.cs">
       <SubType>Form</SubType>
@@ -76,6 +83,12 @@
     <Compile Include="Telas\Categorias.Designer.cs">
       <DependentUpon>Categorias.cs</DependentUpon>
     </Compile>
+    <Compile Include="Telas\Contratacao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\Contratacao.Designer.cs">
+      <DependentUpon>Contratacao.cs</DependentUpon>
+    </Compile>
     <Compile Include="Telas\GerenciarContratantes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +100,12 @@
     </Compile>
     <Compile Include="Telas\GerenciarPrestadores.Designer.cs">
       <DependentUpon>GerenciarPrestadores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Telas\PerfilPrestador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\PerfilPrestador.Designer.cs">
+      <DependentUpon>PerfilPrestador.cs</DependentUpon>
     </Compile>
     <Compile Include="Telas\Pesquisa.cs">
       <SubType>Form</SubType>
@@ -140,6 +159,9 @@
     <EmbeddedResource Include="Telas\Ajuda.resx">
       <DependentUpon>Ajuda.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Telas\Avaliacao.resx">
+      <DependentUpon>Avaliacao.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Telas\CadastrarContratante.resx">
       <DependentUpon>CadastrarContratante.cs</DependentUpon>
     </EmbeddedResource>
@@ -152,11 +174,17 @@
     <EmbeddedResource Include="Telas\Categorias.resx">
       <DependentUpon>Categorias.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Telas\Contratacao.resx">
+      <DependentUpon>Contratacao.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Telas\GerenciarContratantes.resx">
       <DependentUpon>GerenciarContratantes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Telas\GerenciarPrestadores.resx">
       <DependentUpon>GerenciarPrestadores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Telas\PerfilPrestador.resx">
+      <DependentUpon>PerfilPrestador.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Telas\Pesquisa.resx">
       <DependentUpon>Pesquisa.cs</DependentUpon>
